--- a/src/index.css
+++ b/src/index.css
@@ -142,8 +142,8 @@ header h1 {
 }
 .alerta.error {
   background-color: var(--blanco);
-  border-left: 5px solid #b91c1c;
-  color: #b91c1c;
+  border-left: 5px solid #dc2626;
+  color: #dc2626;
 }
 .alerta.success {
 }
@@ -207,7 +207,7 @@ header h1 {
 }
 .contenido-presupuesto p.negativo,
 .contenido-presupuesto p.negativo span {
-  color: red;
+  color: #dc2626;
 }
 .contenido-presupuesto span {
   font-weight: 900;
